unpackaged/main/default/objects/blng__Refund__c/fields/blng__CheckNumber__c.field-meta.xml
<CustomField>
    <fullName>blng__CheckNumber__c</fullName>
    <description>Reference to a check issued in an external system for this refund</description>
    <inlineHelpText>Référence à un chèque émis dans un système externe pour ce remboursement</inlineHelpText>
    <label>Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>