unpackaged/main/default/objects/blng__Refund__c/fields/blng__PaymentGatewayTransactionID__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentGatewayTransactionID__c</fullName>
    <description>The transaction id that used to identify this refund in the payment gateway</description>
    <inlineHelpText>L&#39;ID de transaction utilisé pour identifier ce remboursement dans la passerelle de paiement</inlineHelpText>
    <label>Payment Gateway Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>